# smartagri

./: .gitignore  CONTRIBUTING.md  CORRECTIONS_FINALES_CAHIER_CHARGES.md  CORRECTIONS_FINALES_RCP.md  CORRECTIONS_MENUS_ET_ALERTES.md  CORRECTIONS_SCENARIOS_RCP.md  CORRECTIONS_SCENARIOS_RCP_FINALE.md  DOCKER_ISSUE_RESOLUTION.md  GUIDE_SCENARIOS_RCP.md  IMPLEMENTATION_SUMMARY.md  LEAFLET_GUIDE.md  LICENSE  README.md  deploy.md  docker-compose-corrected.yml  docker-compose.yml  install.ps1  install.sh  odoo.conf  pyproject.toml  test_leaflet_integration.py  test_module_functionality.py  test_rcp_scenarios.py  test_scenarios_rcp_fonctionnels.py
.github/workflows/: ci.yml
smart_agri_decision/: __manifest__.py
smart_agri_decision/data/: avantages_data.xml  demo_data.xml  demo_parcelles.xml  demo_rcp_scenarios.xml
smart_agri_decision/models/: __init__.py  culture.py  dashboard_agricole.py  dashboard_main.py  dashboard_meteo.py  exploitation.py  ia_model.py  ia_prediction.py  ia_predictions.py  intervention.py  intrants_ressources.py  meteo.py  meteo_data.py  parcelle.py  rcp_scenario.py  rcp_scenarios.py  scenario_climatique.py
smart_agri_decision/security/: ir.model.access.csv
smart_agri_decision/static/description/: index.html
smart_agri_decision/static/src/: assets.xml
smart_agri_decision/static/src/css/: leaflet_map.css
smart_agri_decision/static/src/js/: leaflet_map.js
smart_agri_decision/static/src/xml/: leaflet_map.xml
smart_agri_decision/views/: actions.xml  actions_missing.xml  culture_views.xml  dashboard_views.xml  exploitation_views.xml  ia_views.xml  intervention_views.xml  intrants_views.xml  main_menu.xml  meteo_views.xml  parcelle_views.xml  rcp_views.xml  rotation_views.xml  scenario_climatique_views.xml  scenario_views.xml
tests/: __init__.py  test_meteo.py
